--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "just a kidding"
+description: "All the grass on the other side,is it only greener in my mind?"
 ---
 
 {% for post in paginator.posts %}
