--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "About"
+title: "About Me"
 description: "活在你心深处,那顽固自己"
 header-img: "img/about-bg.jpg"
 multilingual: true
